add benchmark scaffold

--- a/packages/smooth/pubspec.yaml
+++ b/packages/smooth/pubspec.yaml
@@ -13,7 +13,11 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  flutter_driver:
+    sdk: flutter
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
   lint: ^1.8.2
 
