--- a/packages/smooth/example/pubspec.yaml
+++ b/packages/smooth/example/pubspec.yaml
@@ -35,7 +35,11 @@ dependencies:
     path: ../
 
 dev_dependencies:
+  flutter_driver:
+    sdk: flutter
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
   lint: ^1.8.2
 
